    - Fixed floating point rounding errors around 0 for trade productivity.
    - Fixed that item-giving quests would not drop a remainder of a stack if the inventory is nearly full instead of only dropping entire stacks that wouldn't fit.
    - Fixed that hexports were off-center from the hex core.
    - Fixed that hexports were showing vulnerability to lightning strikes on Fulgora.
  Gui:
    - Trade arrows display nonzero productivity without mousing over them.
    - Softened the white and cyan trade arrow sprites.
    - Removed the boxes around each trade, de-cluttering the hex core GUI and trade overview.
    - Moved the trade arrow's tooltip to a more obvious location that's below the trade, having the sprite of a productivity module.
    - Added button for pinging trades.
    - Improved trade overview layout.
  Optimizations:
    - Optimized dungeon turret reloading.
    - Optimized ahead-of-time chunk generation around players.
  Translation:
    - Added Polish translations.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features:
    - Added item buffs to most items, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".
    - Added command /set-item-value so that you can get modded items to show up in random trades, the catalog, and be able to use them in /add-trade.
        Also added complementary commands: /import-item-values /export-item-values /remove-item-value /get-item-value
    - Added Fulgora quest to unlock free roboports ("Hexports") built into hex cores that require no power.
  Features:
    - Added command /regenerate-trades so that you can regenerate the trades in your current hexes with newly loaded item values for mods.
        Don't forget about /add-trade and /remove-trade for maximum control of a new playthrough!